--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
   "containerEnv": {
     "CAPYBARA_SERVER_PORT": "45678",
     "SELENIUM_HOST": "selenium",
+    "REDIS_URL": "redis://redis:6379/1"
   },
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
@@ -29,13 +30,5 @@
 
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "bin/setup",
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "Shopify.ruby-extensions-pack",
-        "aliariff.vscode-erb-beautify"
-      ]
-    }
-  }
+  "postCreateCommand": "bin/setup"
 }
