--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  username: MyString
-  email: MyString
-  password_digest: MyString
+  username: one
+  email: one@test
+  password_digest: <%= BCrypt::Password.create('password') %>
 
 two:
-  username: MyString
-  email: MyString
-  password_digest: MyString
+  username: two
+  email: two@test
+  password_digest: <%= BCrypt::Password.create('password') %>
